<resources>
    <string name="app_name">精英管家</string>
    <string name="title_home">服务</string>
    <string name="title_housekeeper">管家</string>
    <string name="title_dynamic">部落</string>
    <string name="title_my">我的</string>
    <string name="title_activity_register">申请办理黑卡</string>
    <string name="title_activity_register_info">填写个人信息</string>
    <string name="title_activity_confirm_register">确认注册信息</string>
    <string name="input_repassword_hint">请输入重置密码</string>
    <string name="title_activity_repassword">重置密码</string>
    <string name="privilege_tips">云栖会籍专属特权</string>
    <string name="custom_name_tips">TIPS：定制卡因工序影响会出现部分延迟，请耐心等待。</string>
    <string name="custom_name_hint">请输入您的中文姓名全拼或者英文名</string>
    <string name="custom_name_title">定制姓名</string>
    <string name="input_phone_hint">请输入您的手机号码</string>
    <string name="input_email_hint">请输入您的电子邮箱</string>
    <string name="input_province_city_hint">请选择省份城市</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_card_hint">请输入黑卡卡号</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="input_repassword1_hint">重新输入重置密码</string>
    <string name="login_text">登录</string>
    <string name="next_text">下一步</string>
    <string name="pay_text">充值</string>
    <string name="tribe_add">新增部落</string>
    <string name="pay_sure">确认</string>
    <string name="pay_atonce">立即支付</string>
    <string name="pay_sure_text">确认充值</string>
    <string name="line_apply_text">在线申请</string>
    <string name="home_user_title" formatted="false">尊贵的 %s %s，您好。</string>



    <string name="app_updater_download_later">暂不更新</string>
    <string name="app_updater_download_now">马上更新</string>
    <string name="app_updater_app_market">应用市场</string>
    <string name="app_updater_downloading">正在下载…</string>
    <string name="app_updater_download_failed">下载失败：%d</string>
    <string name="app_updater_dir_not_found">找不到下载目录 - %s</string>
    <string name="app_updater_install">安装</string>
    <string name="app_updater_retry">重试下载</string>

</resources>
