<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_icon_0_sel"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/tab_icon_1_sel"
        android:title="@string/title_housekeeper"
        app:actionLayout="@layout/ly_badge"></item>

    <item
        android:id="@+id/navigation_dynamic"
        android:icon="@drawable/tab_icon_3_sel"
        android:title="@string/title_dynamic" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tab_icon_2_sel"
        android:title="@string/title_my" />

</menu>
