<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/height_64">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:background="#D7D7D7"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:elevation="3dip"
                android:src="@mipmap/backcard_card" />

            <EditText
                android:id="@+id/blackcard_no"
                style="@style/comm_edittext_style"
                android:layout_marginTop="276dp"
                android:inputType="number"
                android:hint="@string/input_card_hint"
                 />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" android:layout_marginTop="350dp">

                <EditText
                    style="@style/comm_edittext_style"
                    android:id="@+id/phone_code"
                    android:layout_marginTop="0dp"
                    android:layout_toLeftOf="@+id/code_button"
                    android:hint="@string/input_code_hint" />

                <Button android:id="@+id/code_button"
                    style="@style/comm_button_style"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="12dp"
                    android:text="获取验证码"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


            <EditText
                android:id="@+id/password"
                style="@style/comm_edittext_style"
                android:layout_marginTop="424dp"
                android:inputType="textPassword"
                android:hint="@string/input_repassword_hint"  />

            <EditText
                android:id="@+id/password1"
                style="@style/comm_edittext_style"
                android:layout_marginTop="498dp"
                android:inputType="textPassword"
                android:hint="@string/input_repassword1_hint"
                />

            <Button
                android:id="@+id/but_repassword"
                style="@style/comm_button_style"
                android:layout_marginTop="572dp"
                android:text="@string/title_activity_repassword"
                />

        </FrameLayout>
    </ScrollView>
</FrameLayout>
